--- a/index.html
+++ b/index.html
@@ -18,5 +18,12 @@
         >
             Record
         </button>
+        <!-- Stop Button -->
+        <button
+            class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-full"
+            id="stop"
+        >
+            Stop
+        </button>
     </body>
 </html>
