--- a/index.html
+++ b/index.html
@@ -25,5 +25,10 @@
         >
             Stop
         </button>
+        <br />
+        <div
+            class="w-full p-4 flex flex-row flex-wrap gap-4 justify-between"
+            id="videos"
+        ></div>
     </body>
 </html>
